# k8s-env

./: .gitignore  CLAUDE.md  README.md  k8s  k8s-env  pyproject.toml
assets/: demo.tape  record.sh  seed.yaml
contrib/: README.md  k8s
k8s_env/: args.py  cli.py  context.py  k8s.py  profile.py  service.py  status.py  trust.py  ui.py  utils.py
