[project]
name = "k8s-env"
version = "0.1.0"
description = "Kubernetes environment manager"
requires-python = ">=3.10"

[project.scripts]
k8s-env = "k8s_env.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["B027"]
