[project]
name = "k8s-env"
version = "0.4.0"
description = "Kubernetes environment manager"
requires-python = ">=3.10"

[project.scripts]
k8s = "k8s_env.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "unnecessary-lambda",
    "subprocess-run-check",
]
